# serentin

./: README.md
.github/: issue-branch.yml
.github/workflows/: android-release.yml  api.yml  app-build.yml  dashboard.yml  ios-release.yml  lint.yml  mobile.yml  test.yml
app/: README.md  pubspec.yaml
app/test/: widget_test.dart
dashboard/: .eslintrc.json  README.md  next.config.js  package.json
dashboard/src/app/: globals.css
dashboard/src/app/(guest)/: layout.tsx  page.tsx
dashboard/src/components/ui/: alert-dialog.tsx  calendar.tsx  dialog.tsx  radio-group.tsx  typography.tsx
dashboard/src/config/: sidebar.ts
services/api/: .env  .gitignore  Dockerfile  Makefile  go.mod  go.sum
services/api/cmd/client/: main.go
services/api/cmd/server/: main.go
services/api/configs/: viper.go
services/api/internal/db/: db.go
services/api/internal/service/: auth.go
services/api/pkg/metadata/: metadata.go
services/api/pkg/session/: session.go
services/api/pkg/validator/: validator.go
services/api/proto/: api.pb.go  api.proto  api_grpc.pb.go
services/api/proto/auth/: auth.pb.go  auth.proto  auth_grpc_pb.go
services/classification/: .gitignore  Dockerfile  Makefile  README.md  installed_packages.txt  main.py  pyproject.toml  requirements.txt
services/classification/dataset/: health_monitor.csv
services/classification/proto/: classification.proto  classification_pb2.py  classification_pb2.pyi  classification_pb2_grpc.py
services/classification/service/: classification_service.py
services/classification/service/model/: random_forest_1.0.pkl
(+27 files in other folders)
