[tool.poetry]
name = "classification"
version = "0.1.0"
description = "A microservice application for predicting stress level based on physical data"
authors = ["albugowy15 <kholidbughowi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
grpcio = "^1.59.0"
joblib = "^1.3.2"
scipy = "^1.11.3"
numpy = "^1.26.0"
pandas = "^2.1.1"
protobuf = "^4.24.4"
python-dotenv = "^1.0.0"
scikit-learn = "1.2.2"
grpcio-tools = "^1.59.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
